去除预览特性